@@ -1,3 +1,10 @@
+2012-04-19  Thomas Schwinge  <thomas@codesourcery.com>
+
+	* elf32-sh.c (elf_sh_link_hash_entry): Specify an enum identifier for
+	got_type.
+	(allocate_dynrelocs, sh_elf_relocate_section, sh_elf_check_relocs): Use
+	it.
+
 2012-04-17  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* elf32-sh.c (allocate_dynrelocs): Don't allocate dynamic
